--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,10 @@ ul{
   color: #555;
 }
 
+.btn-read-more{
+  margin-top:  15px;
+}
+
 /* Section a*/
 
 .section-a {
@@ -101,8 +105,14 @@ ul{
 
 .section-b {
   position: relative;
-  background: url('../img/forest.jpg') no-repeat bottom center/cover;
+  background: url('../img/forest.jpg');
+  /*background: url('../img/forest.jpg') no-repeat bottom center/cover;*/
   height: 600px;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .section-b-inner {
@@ -163,6 +173,90 @@ ul{
   height: 100%;
 }
 
+/* Section d*/
+
+.section-d {
+  margin-top:2rem;
+  margin-bottom: 4rem;
+}
+
+.section-d .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 3rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.section-d .container img{
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+
+.section-d h1 {
+  font-size: 4rem;
+  color: var(--primary-color);
+}
+
+.section-d p {
+  margin: 1rem 0;
+}
+
+/* Section e*/
+.section-e .container{
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 2rem;
+}
+
+.section-e .poduct-details{
+  text-align: center;
+  padding: 2rem 2rem 0rem 2rem;
+}
+
+.section-e .container-icons {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 2rem;
+  align-items: baseline;
+  justify-content: center;
+  margin:1rem 10rem 3rem 10rem;
+}
+.section-e .prodcut-icon{
+  text-align: center;
+}
+.section-e .prodcut-icon .fas{
+  font-size:70px;
+  color: rgb(139, 59, 59);
+  margin-top:0rem;
+  margin-bottom: 15px;
+}
+
+.section-e h2 {
+  font-size: 3rem;
+  color: var(--primary-color);
+}
+
+.section-e h3 {
+  font-size: 2rem;
+  color: var(--primary-color);
+}
+
+.section-e p {
+  margin: 1rem 0;
+}
+
+/* Section Footer*/
+
+.section-footer {
+  background: var(--primary-color);
+  color: #fff;
+  padding: 4rem 0;
+}
+
+
 .section-footer {
   background: var(--primary-color);
   color: #fff;
@@ -203,13 +297,8 @@ ul{
   border-radius: 20px;
   line-height: 0;
   margin-top: 1rem;
+  margin-bottom: 1rem;
 }
-
-/* // .form-control-wrap {
-// 	position: relative;
-// 	display: inline-block;
-// 	width: 100%;
-// } */
 
 .email-form .form-control {
   display: inline-block;
@@ -269,11 +358,17 @@ ul{
   background-color: var(--overlay-color);
 }
 
-@media (max-width: 700px) {
+@media (max-width: 768px) {
   .section-a .container {
     grid-template-columns: 1fr;
     text-align: center;
   }
+
+  .section-d .container {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
 
   .section-a .container div:first-child {
     order: 2;
@@ -308,6 +403,21 @@ ul{
   .section-c .gallery a:last-child {
     display: none;
   }
+  .section-e .container-icons {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    grid-gap: 1rem;
+    align-items: baseline;
+    justify-content: center;
+    margin:1rem 5rem 3rem 5rem;
+  }
+
+  .section-e .fas {
+    font-size: 50px;
+  }
+  .section-e h2{
+    font-size: 2rem;
+  }
 
   .section-footer {
     padding: 2rem 0;
@@ -320,5 +430,21 @@ ul{
   .section-footer div:nth-child(2),
   .section-footer div:nth-child(3) {
     display: none;
+  }
+}
+
+@media (max-width: 420px) {
+
+  .section-e .container-icons {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 1rem;
+    align-items: baseline;
+    justify-content: center;
+    margin:1rem 2rem 3rem 2rem;
+  }
+
+  .section-e .fas {
+    font-size: 40px;
   }
 }
